# IZGproj

./: CMakeLists.txt  README.md  drawTriangles.cpp  main.c  phongMethod.c
